# babylonjsBetter

./: .gitignore  BattleSkillUI.tsx  BattleStartUI.tsx  ParticleEditor.tsx  SpriteAnchorEditor.tsx  TargetConnectionDemo.tsx  Untitled  battle.tsx  checkerboard.html  checkerboard_v2.html  clash.html  combat-test.html  desktop-pet.html  desktopPetMain.tsx  energy_line_dynamic_erosion.html  galgame-console.html  galgame.html  game-manager.js  gridpack.html  index.html  limbusgame-console.html  limbusgame.html  limbusgame_v2.html  limbusgame_v2_Canvas2D.html  limbusgame_v3_Canvas2D.html  package-lock.json  package.json  particle-editor.html  rpg-battle.html  skill.html  skilleffect.html  sprite-anchor-editor.html  targeindex.html  targeindex_old.html  target-connection.css  targetmain.tsx  tauri-game.html  tauriGameMain.tsx  tsconfig.app.json  tsconfig.clash.json  (+2 more)
cameraController/: CameraController.ts
chain/: index.html
clash/: App.tsx  clash-logic-applyDamage.js  clash-logic-applyDamage.ts  clash-logic-effects.js  clash-logic-effects.ts  clash-logic-engine.js  clash-logic-engine.ts  clash-logic-startClash.js  clash-logic-startClash.ts  clash-pipeline-engine.ts  clash.html  combat-api.ts  config.ts  dice-effect-config.js  dice-effect-config.ts  dice-input-effect-input.js  dice-input-effect-input.ts  dice-input.js  dice-input.ts  dice-tag-config.js  dice-tag-config.ts  globals.d.ts  index.tsx  main.ts  skill-effect-config.js  store.ts  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+242 files in other folders)
