[package]
name = "desktop_pet_skeleton"
version = "0.1.0"
description = "Tauri + Three.js desktop pet skeleton"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
